<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/enterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSecond">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/text_name_TV"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sp"

                />

            <Button
                android:id="@+id/saveBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_save_BTN"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/_10dp"
                android:gravity="center_horizontal"

                android:text="@string/text_name_TV"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/text_age_TV"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enterAgeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sp"

                />

            <Button
                android:id="@+id/loadBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_load_BTN"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:gravity="center_horizontal"

                android:text="@string/text_age_TV"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/text_position_TV"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/enterPositionSP"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:textSize="@dimen/_20sp" />

            <Button
                android:id="@+id/removeBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_remove_BTN"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:gravity="center_horizontal"

                android:text="@string/text_position_TV"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutSecond"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLayout">


        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:layout_weight="1"
            android:padding="8dp"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ageTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:layout_weight="1"
            android:padding="8dp"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/positionTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:layout_weight="1"
            android:padding="@dimen/_8dp"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>